--- a/cypress/jenkins/Jenkinsfile
+++ b/cypress/jenkins/Jenkinsfile
@@ -77,8 +77,8 @@ node {
                 try {
                   stage('Clean Test Environment') {  
                     sh """
-                       corrals=$(${WORKSPACE}/bin/corral list | grep -v \"NAME\" | grep -v \"\+\" | cut -d' ' -f 2)
-                       for i in ${corrals}; do ${WORKSPACE}/bin/corral delete ${i}; done
+                       "corrals=$(${WORKSPACE}/bin/corral list | grep -v \"NAME\" | grep -v \"\+\" | cut -d' ' -f 2)"
+                       "for i in ${corrals}; do ${WORKSPACE}/bin/corral delete ${i}; done"
                     """
                   }
                 } catch(err) {
