--- a/cypress/jenkins/Jenkinsfile
+++ b/cypress/jenkins/Jenkinsfile
@@ -76,10 +76,8 @@ node {
             if ("${env.CLEANUP}".toLowerCase() == "true") {
                 try {
                   stage('Clean Test Environment') {  
-                    sh """
-                       "corrals=$(${WORKSPACE}/bin/corral list | grep -v \"NAME\" | grep -v \"\+\" | cut -d' ' -f 2)"
+                    sh "corrals=\$(${WORKSPACE}/bin/corral list | grep -v \"NAME\" | grep -v \"\+\" | cut -d' ' -f 2)" +
                        "for i in ${corrals}; do ${WORKSPACE}/bin/corral delete ${i}; done"
-                    """
                   }
                 } catch(err) {
                   echo "Error: " + err
