--- a/package.json
+++ b/package.json
@@ -183,6 +183,8 @@
     "cypress-axe": "1.6.0",
     "cypress-delete-downloads-folder": "0.0.4",
     "cypress-mochawesome-reporter": "3.8.2",
+    "cypress-multi-reporters": "^2.0.5",
+    "cypress-qase-reporter": "^2.3.1",
     "cypress-real-events": "1.14.0",
     "cypress-terminal-report": "^7.2.0",
     "eslint": "7.32.0",
@@ -200,6 +202,7 @@
     "jest": "27.5.1",
     "jest-serializer-vue": "2.0.2",
     "lodash.debounce": "4.0.8",
+    "mocha-junit-reporter": "^2.2.1",
     "nodemon": "2.0.22",
     "nyc": "15.1.0",
     "start-server-and-test": "2.0.10",
