--- a/package.json
+++ b/package.json
@@ -181,8 +181,11 @@
     "cy2": "4.0.9",
     "cypress": "11.1.0",
     "cypress-axe": "1.6.0",
+    "cypress-commands": "^3.0.0",
     "cypress-delete-downloads-folder": "0.0.4",
     "cypress-mochawesome-reporter": "3.8.2",
+    "cypress-multi-reporters": "^2.0.5",
+    "cypress-qase-reporter": "^2.3.1",
     "cypress-real-events": "1.14.0",
     "cypress-terminal-report": "^7.2.0",
     "eslint": "7.32.0",
@@ -199,7 +202,10 @@
     "frontmatter-markdown-loader": "3.7.0",
     "jest": "27.5.1",
     "jest-serializer-vue": "2.0.2",
+    "junit-report-merger": "^7.0.1",
     "lodash.debounce": "4.0.8",
+    "mocha": "^11.7.1",
+    "mocha-junit-reporter": "^2.2.1",
     "nodemon": "2.0.22",
     "nyc": "15.1.0",
     "start-server-and-test": "2.0.10",
